trying to solve issue with overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -28,20 +28,6 @@
   --rad: 5px;
 }
 
-/* * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-h1, h2, h3 {
-  margin: 0.5rem 0;
-} */
-
-html {
-  overflow-x: hidden;
-}
-
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
