--- a/src/components/general/style/index.css
+++ b/src/components/general/style/index.css
@@ -1,104 +1,94 @@
 /* Navbar */
 
 .nav {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-    padding: 1rem 0;
-    /* padding-bottom: .5rem; */
-    margin: 0 3rem;
+  padding: 1rem 0;
+  /* padding-bottom: .5rem; */
+  margin: 0 3rem;
 
-    border-bottom: 1px solid var(--bg-color-sc);
+  border-bottom: 1px solid var(--bg-color-sc);
 
-    position: sticky;
+  position: sticky;
 
-    top: 0;
-    left: 0;
-    z-index: 100;
+  top: 0;
+  left: 0;
+  z-index: 100;
 
-    /* width: 100%; */
+  /* width: 100%; */
 
-    background-color: var(--bg-color);
+  background-color: var(--bg-color);
 
-    /* no overflow */
-    overflow: hidden;
+  /* no overflow */
+  overflow: hidden;
 }
 
 .nav-list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-list li {
-    padding: 10px;
-    /* margin: 0 5px; */
-    margin-left: 1.2rem;
+  padding: 10px;
+  /* margin: 0 5px; */
+  margin-left: 1.2rem;
 
-    border-radius: var(--rad);
+  border-radius: var(--rad);
 }
 
 .nav-item a {
-    display: flex;
-    gap: .5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
 .nav-list a {
-    color: var(--white);
-    text-decoration: none;
+  color: var(--white);
+  text-decoration: none;
 }
 
 .nav-list li:hover {
-    background-color: var(--bg-color-sc);
+  background-color: var(--bg-color-sc);
 }
 
 .nav-logo {
-    font-size: 1.5rem;
-    font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: bold;
 
-    /* font-family: 'Times New Roman', Times, serif; */
+  /* font-family: 'Times New Roman', Times, serif; */
 }
 
 .nav-logo a {
-    color: var(--white);
-    text-decoration: none;
+  color: var(--white);
+  text-decoration: none;
 }
 
 .nav-logo a:hover {
-    color: var(--blue);
+  color: var(--blue);
 }
 
 /* Main */
 
 main {
-    padding: 0 20%;
+  padding: 0 20%;
 
-    padding-top: 2rem;
+  padding-top: 2rem;
 
-    margin-top: 2rem;
-    margin-bottom: 10rem;
+  margin-top: 2rem;
+  margin-bottom: 10rem;
 
-    overflow: hidden;
-
-    min-height: 50vh;
+  /* min-height: 50vh; */
 }
 
 /* Footer */
 
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    background-color: var(--bg-color-sc);
+  background-color: var(--bg-color-sc);
 
-    padding: 2rem;
-
-    /* making sure that the footer is always at the bottom of the screen */
-    /* position: fixed;
-
-    bottom: 0;
-    left: 0; */
-
-    /* width: 100%; */
+  padding: 2rem;
 }
