--- a/src/components/general/style/messageBar.css
+++ b/src/components/general/style/messageBar.css
@@ -1,51 +1,50 @@
 .messages {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-
-    padding: 10px;
+  padding: 1rem;
 }
 
 .message {
-    width: 80%;
+  width: 80%;
 
-    padding: 1rem 2rem;
-    background-color: var(--bg-color-sc);
+  padding: 1rem 2rem;
+  background-color: var(--bg-color-sc);
 
-    border: 1px solid var(--white);
-    border-radius: var(--rad);
+  border: 1px solid var(--white);
+  border-radius: var(--rad);
 
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .message-alert {
-    background-color: var(--red-mut);
-    border: 1px solid var(--red);
+  background-color: var(--red-mut);
+  border: 1px solid var(--red);
 }
 
 .message-success {
-    background-color: var(--green-mut);
-    border: 1px solid var(--green);
+  background-color: var(--green-mut);
+  border: 1px solid var(--green);
 }
 
 .message-info {
-    background-color: var(--blue-mut);
-    border: 1px solid var(--blue);
+  background-color: var(--blue-mut);
+  border: 1px solid var(--blue);
 }
 
 .message-warning {
-    background-color: var(--orange-mut);
-    border: 1px solid var(--orange);
+  background-color: var(--orange-mut);
+  border: 1px solid var(--orange);
 }
 
 .message button {
-    color: var(--white);
+  color: var(--white);
 
-    border: none;
-    cursor: pointer;
+  border: none;
+  cursor: pointer;
 
-    background-color: transparent;
+  background-color: transparent;
 }
